--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^14.2.0",
     "@schematics/angular": "^9.1.0",
     "bootstrap": "^4.1.1",
+    "bootswatch": "^5.2.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
