--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.5",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -24,6 +25,7 @@
     "bootswatch": "^5.2.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
