--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^7.0.0",
     "@schematics/angular": "^9.1.0",
     "bootstrap": "^4.1.1",
     "bootswatch": "^4.1.1",
